Added posibility for working with proxy and some improvements

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -222,7 +222,8 @@
         "mlerp",
         "photogram",
         "substep",
-        "unmark"
+        "unmark",
+        "dirtylarry"
     ],
     
 }
