--- a/game.project
+++ b/game.project
@@ -13,7 +13,8 @@ input_method = HiddenInputField
 
 [project]
 title = AtlasLoader
-version = 1.0.2
+version = 1.1.0
+dependencies#0 = https://github.com/andsve/dirtylarry/archive/refs/heads/master.zip
 
 [library]
 include_dirs = atlas_loader
